kubernetes/service-request-path/evidence/iptables-nat-worker.txt
# Generated by iptables-save v1.8.11 (nf_tables) on Mon Sep 28 10:52:49 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [1:85]
:OUTPUT ACCEPT [59:3540]
:POSTROUTING ACCEPT [104:7284]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
:KIND-MASQ-AGENT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-23NJSXDYUSXY5E7Q - [0:0]
:KUBE-SEP-A5X52HSFEEQBO2WN - [0:0]
:KUBE-SEP-BWHGELGX6BITPZVO - [0:0]
:KUBE-SEP-CLAGU7VMF4VCXE4X - [0:0]
:KUBE-SEP-G2TK3RG32KUOAWKQ - [0:0]
:KUBE-SEP-H7FN6LU3RSH6CC2T - [0:0]
:KUBE-SEP-HK254EL4IH3TTFBT - [0:0]
:KUBE-SEP-HOQWGLEHBH4OOZA5 - [0:0]
:KUBE-SEP-IILFYUIUZKX5DOYL - [0:0]
:KUBE-SEP-LV3ENFGE7E3YK42S - [0:0]
:KUBE-SEP-TCIZBYBD3WWXNWF5 - [0:0]
:KUBE-SEP-V2PECCYPB6X2GSCW - [0:0]
:KUBE-SEP-Z6M7ZHWCTBNMPLD7 - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-JD5MR3NA4I4DYORP - [0:0]
:KUBE-SVC-LOLE4ISW44XBNF3G - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-Y6HFJASGWYNICYWJ - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -d 192.168.65.254/32 -j DOCKER_OUTPUT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -d 192.168.65.254/32 -j DOCKER_OUTPUT
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -d 192.168.65.254/32 -j DOCKER_POSTROUTING
-A POSTROUTING -m addrtype ! --dst-type LOCAL -m comment --comment "kind-masq-agent: ensure nat POSTROUTING directs all non-LOCAL destination traffic to our custom KIND-MASQ-AGENT chain" -j KIND-MASQ-AGENT
-A DOCKER_OUTPUT -d 192.168.65.254/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:45753
-A DOCKER_OUTPUT -d 192.168.65.254/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:35953
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 45753 -j SNAT --to-source 192.168.65.254:53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 35953 -j SNAT --to-source 192.168.65.254:53
-A KIND-MASQ-AGENT -d 10.244.0.0/16 -m comment --comment "kind-masq-agent: local traffic is not subject to MASQUERADE" -j RETURN
-A KIND-MASQ-AGENT -m comment --comment "kind-masq-agent: outbound traffic is subject to MASQUERADE (must be last in chain)" -j MASQUERADE
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
-A KUBE-SEP-23NJSXDYUSXY5E7Q -s 10.244.1.3/32 -m comment --comment "default/web" -j KUBE-MARK-MASQ
-A KUBE-SEP-23NJSXDYUSXY5E7Q -p tcp -m comment --comment "default/web" -m tcp -j DNAT --to-destination 10.244.1.3:8080
-A KUBE-SEP-A5X52HSFEEQBO2WN -s 10.244.1.3/32 -m comment --comment "default/web-badport" -j KUBE-MARK-MASQ
-A KUBE-SEP-A5X52HSFEEQBO2WN -p tcp -m comment --comment "default/web-badport" -m tcp -j DNAT --to-destination 10.244.1.3:9090
-A KUBE-SEP-BWHGELGX6BITPZVO -s 10.244.1.2/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-BWHGELGX6BITPZVO -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.244.1.2:53
-A KUBE-SEP-CLAGU7VMF4VCXE4X -s 10.244.2.2/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-CLAGU7VMF4VCXE4X -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.244.2.2:9153
-A KUBE-SEP-G2TK3RG32KUOAWKQ -s 10.244.2.3/32 -m comment --comment "default/web" -j KUBE-MARK-MASQ
-A KUBE-SEP-G2TK3RG32KUOAWKQ -p tcp -m comment --comment "default/web" -m tcp -j DNAT --to-destination 10.244.2.3:8080
-A KUBE-SEP-H7FN6LU3RSH6CC2T -s 10.244.2.2/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-H7FN6LU3RSH6CC2T -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.244.2.2:53
-A KUBE-SEP-HK254EL4IH3TTFBT -s 10.244.1.2/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-HK254EL4IH3TTFBT -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.244.1.2:9153
-A KUBE-SEP-HOQWGLEHBH4OOZA5 -s 10.244.2.4/32 -m comment --comment "default/web-badport" -j KUBE-MARK-MASQ
-A KUBE-SEP-HOQWGLEHBH4OOZA5 -p tcp -m comment --comment "default/web-badport" -m tcp -j DNAT --to-destination 10.244.2.4:9090
-A KUBE-SEP-IILFYUIUZKX5DOYL -s 10.244.2.3/32 -m comment --comment "default/web-badport" -j KUBE-MARK-MASQ
-A KUBE-SEP-IILFYUIUZKX5DOYL -p tcp -m comment --comment "default/web-badport" -m tcp -j DNAT --to-destination 10.244.2.3:9090
-A KUBE-SEP-LV3ENFGE7E3YK42S -s 10.244.2.4/32 -m comment --comment "default/web" -j KUBE-MARK-MASQ
-A KUBE-SEP-LV3ENFGE7E3YK42S -p tcp -m comment --comment "default/web" -m tcp -j DNAT --to-destination 10.244.2.4:8080
-A KUBE-SEP-TCIZBYBD3WWXNWF5 -s 10.244.2.2/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-TCIZBYBD3WWXNWF5 -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.244.2.2:53
-A KUBE-SEP-V2PECCYPB6X2GSCW -s 172.18.0.2/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-V2PECCYPB6X2GSCW -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 172.18.0.2:6443
-A KUBE-SEP-Z6M7ZHWCTBNMPLD7 -s 10.244.1.2/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-Z6M7ZHWCTBNMPLD7 -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.244.1.2:53
-A KUBE-SERVICES -d 10.96.7.186/32 -p tcp -m comment --comment "default/web cluster IP" -m tcp --dport 80 -j KUBE-SVC-LOLE4ISW44XBNF3G
-A KUBE-SERVICES -d 10.96.108.232/32 -p tcp -m comment --comment "default/web-badport cluster IP" -m tcp --dport 80 -j KUBE-SVC-Y6HFJASGWYNICYWJ
-A KUBE-SERVICES -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-SVC-JD5MR3NA4I4DYORP
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-ERIFXISQEP7F7OF4 ! -s 10.244.0.0/16 -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp -> 10.244.1.2:53" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-BWHGELGX6BITPZVO
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp -> 10.244.2.2:53" -j KUBE-SEP-H7FN6LU3RSH6CC2T
-A KUBE-SVC-JD5MR3NA4I4DYORP ! -s 10.244.0.0/16 -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-MARK-MASQ
-A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics -> 10.244.1.2:9153" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-HK254EL4IH3TTFBT
-A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics -> 10.244.2.2:9153" -j KUBE-SEP-CLAGU7VMF4VCXE4X
-A KUBE-SVC-LOLE4ISW44XBNF3G ! -s 10.244.0.0/16 -d 10.96.7.186/32 -p tcp -m comment --comment "default/web cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SVC-LOLE4ISW44XBNF3G -m comment --comment "default/web -> 10.244.1.3:8080" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-23NJSXDYUSXY5E7Q
-A KUBE-SVC-LOLE4ISW44XBNF3G -m comment --comment "default/web -> 10.244.2.3:8080" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-G2TK3RG32KUOAWKQ
-A KUBE-SVC-LOLE4ISW44XBNF3G -m comment --comment "default/web -> 10.244.2.4:8080" -j KUBE-SEP-LV3ENFGE7E3YK42S
-A KUBE-SVC-NPX46M4PTMTKRN6Y ! -s 10.244.0.0/16 -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https -> 172.18.0.2:6443" -j KUBE-SEP-V2PECCYPB6X2GSCW
-A KUBE-SVC-TCOU7JCQXEZGVUNU ! -s 10.244.0.0/16 -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns -> 10.244.1.2:53" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-Z6M7ZHWCTBNMPLD7
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns -> 10.244.2.2:53" -j KUBE-SEP-TCIZBYBD3WWXNWF5
-A KUBE-SVC-Y6HFJASGWYNICYWJ ! -s 10.244.0.0/16 -d 10.96.108.232/32 -p tcp -m comment --comment "default/web-badport cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SVC-Y6HFJASGWYNICYWJ -m comment --comment "default/web-badport -> 10.244.1.3:9090" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-A5X52HSFEEQBO2WN
-A KUBE-SVC-Y6HFJASGWYNICYWJ -m comment --comment "default/web-badport -> 10.244.2.3:9090" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-IILFYUIUZKX5DOYL
-A KUBE-SVC-Y6HFJASGWYNICYWJ -m comment --comment "default/web-badport -> 10.244.2.4:9090" -j KUBE-SEP-HOQWGLEHBH4OOZA5
COMMIT
# Completed on Mon Sep 28 10:52:49 2026
